3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/player.c: make a player's starting items be locked, so that they
can't accidentally drop and lose them without unlocking them first.
Brendan Lally 2006-02-09

Apply patch #1427979 (code-cleanup: add const, fix warnings) by Stefan
Huehner.
---
common/{anim.c,button.c,exp.c,friend.c,image.c,item.c,living.c,los.c,map.c,
object.c,player.c,quest.c,readable.c,recipe.c,region.c,treasure.c,utils.c},
include/libproto.h: Add "const" to pointer function parameters.
Andreas Kirschbaum 2006-02-09

Make create food spell work for all FOOD/DRINK objects. It used to fail for
objects where another object with the same name but type POISON does exist.
---
common/arch.c: Add new function find_archetype_by_object_type_name() to find
   an archetype by item type and item name.
include/libproto.h: Add new prototype.
server/spell_effect.c: In cast_create_food() only search for objects of type
   FOOD or DRINK.
Andreas Kirschbaum 2006-02-09

server/main.c: Modify enter_exit() to see if player is in a transport,
  and if so, remove him.  Can happen if player uses word of recall
  while in a transport.
MSW 2006-02-07

Regional jails.
---
common/region.c, include/libproto.h, map.h: parse jail entries, new function
  get_jail_exit to return the exit to the local jail.
doc/Developers/regions: update
server/c_wiz.c, commands.c, include/sproto.h: add dm command, command_arrest
  to jail players in the correct location.
lib/regions: add scorn and navar jails.
Brendan Lally 2006/02/08

Code that adds transports.  Transports are described more in detail in
docs/Developers/objects.
---